--- a/template/package.json
+++ b/template/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "build": "preact build",
+    "build": "preact build --no-sw --no-esm --no-sw --no-json --no-prerender --no-inline-css --no-prerenderUrls",
     "serve": "sirv build --port 8080 --cors --single",
     "dev": "preact watch",
     "lint": "eslint src"
@@ -18,6 +18,7 @@
   "devDependencies": {
     "eslint": "^7.17.0",
     "eslint-config-preact": "^1.1.3",
+    "mime-types": "^2.1.29",
     "preact-cli": "^3.0.0",
     "sirv-cli": "^1.0.3"
   },
